--- a/LuongEmStudio/LuongEmStudio.csproj
+++ b/LuongEmStudio/LuongEmStudio.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <PackageIcon>makeup.png</PackageIcon>
     <ApplicationIcon>makeup_wHv_icon.ico</ApplicationIcon>
-    <BaseOutputPath>C:\Users\kido_nguyen\Desktop\LuongEm\app\LuongEmStudio\LuongEmStudio\bin\</BaseOutputPath>
+    <BaseOutputPath>D:\TEST\LuongEmStudio\Bin</BaseOutputPath>
     <TargetFramework>net8.0-windows8.0</TargetFramework>
     <Version>1.0.0.2</Version>
     <FileVersion>1.0.0.3</FileVersion>
