--- a/LuongEmStudio/LuongEmStudio.csproj
+++ b/LuongEmStudio/LuongEmStudio.csproj
@@ -7,9 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <PackageIcon>makeup.png</PackageIcon>
     <ApplicationIcon>makeup_wHv_icon.ico</ApplicationIcon>
-    <BaseOutputPath>D:\TEST\LuongEmStudio\Bin</BaseOutputPath>
+    <BaseOutputPath>D:\Bak_DESKTOP\FREE CODE\LuongEmStudio\LuongEmStudio\Bin</BaseOutputPath>
     <TargetFramework>net8.0-windows8.0</TargetFramework>
-    <Version>1.0.0.2</Version>
+    <Version>1.0.0.3</Version>
     <FileVersion>1.0.0.3</FileVersion>
     <AssemblyVersion>1.0.0.3</AssemblyVersion>
   </PropertyGroup>
